<resources>
    <string name="app_name">Catalogue</string>
    <string name="my_categories">My Categories</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_category_description">Enter Category Description</string>
    <string name="submit">Submit</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="submit_item">Submit Item</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password_change">Confirm Password Change</string>
    <string name="edit_details">Edit Details</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="enter_new_display_name">Enter New Display Name</string>
    <string name="submit">Submit</string>
    <string name="login_here">Login Here</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_around_here_click_here_to_register">New Around Here? Click Here to Register</string>
    <string name="my_profile">My Profile</string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="edit_details">Edit Details</string>
    <string name="change_password">Change Password</string>
    <string name="register_here">Register Here</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_click_here_to_login">Already Have an Account? Click Here to Login</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
</resources>