<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:background="#FDF5E6">

    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/change_password"
        android:textColor="#E9967A"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="14"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textColor="#E9967A"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="14"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColor="#E9967A"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="14"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:textColor="#E9967A"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submitPasswordChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFA07A"
        android:ems="20"
        android:padding="10dp"
        android:text="@string/confirm_password_change" />

</RelativeLayout>