<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#FDF5E6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            android:text="@string/register_here"
            android:textColor="#E9967A"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="14"
            android:hint="@string/enter_email_address"
            android:textColor="#E9967A"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/enter_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="14"
            android:hint="@string/enter_display_name"
            android:textColor="#E9967A"
            android:inputType="text|textCapSentences"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_display_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="14"
            android:hint="@string/enter_password"
            android:textColor="#E9967A"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFA07A"
            android:ems="14"
            android:padding="10dp"
            android:text="@string/register"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/to_login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerBTN"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/already_have_an_account_click_here_to_login"
            android:textSize="14sp"
            android:textStyle="italic|bold" />
    </RelativeLayout>

</ScrollView>