<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategory"
    android:background="#FDF5E6">

    <TextView
        android:id="@+id/add_category_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/add_category"
        android:textColor="#E9967A"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_category_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="14"
        android:hint="@string/enter_category_name"
        android:textColor="#E9967A"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/category_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_name"
        android:layout_marginStart="20dp"
        android:ems="14"
        android:layout_marginTop="20dp"
        android:textColor="#E9967A"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:hint="@string/enter_category_description" />

    <Button
        android:id="@+id/createCategoryBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />


</RelativeLayout>